@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6994 2004/08/25 18:35:06 minskim Exp $
+$NetBSD: CHANGES,v 1.6995 2004/08/25 18:51:08 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4044,3 +4044,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added digikam-0.6.2 [seb 2004-08-25]
 	Updated imapfilter to 1.0.1 [seb 2004-08-25]
 	Updated alee-ttf to 2.7 [minskim 2004-08-25]
+	Updated hre to 0.9.8 [minskim 2004-08-25]
